# backend/internal/entity/kelas.go
@@ -4,7 +4,6 @@ package entity
 type Kelas struct {
 	ID             int    `gorm:"primaryKey;autoIncrement" json:"id"`
 	NamaKelas      string `gorm:"type:varchar(100);not null" json:"nama_kelas"`
-	IsRegisterOpen bool   `gorm:"default:false" json:"is_register_open"`
 }
 
 func (Kelas) TableName() string { return "kelas" }
